--- a/app/src/main/res/layout/activity_show_tin_tuc.xml
+++ b/app/src/main/res/layout/activity_show_tin_tuc.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Show_tin_tucActivity">
+    tools:context="com.example.buoi5.Show_tin_tucActivity">
 
     <WebView
         android:id="@+id/wbv_tin_tuc"
@@ -13,7 +13,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
